# ibl-tuning

./: .gitignore  pyproject.toml
data/: ibl-ver1-test.jsonl
data/ibl-regression-ver1-all/: test.jsonl
data/ibl-regression-ver1-branch/: test.jsonl
data/ibl-regression-ver1-linear/: test.jsonl
data/ibl-regression-ver1-mix/: test.jsonl
examples/: ibl_llama2_inference.ipynb  ibl_llama2_train.ipynb  ibl_llama2_upload.ipynb
notebook/: exec.ipynb  ibl_exec.ipynb  linear_data_200.csv  make_data.ipynb  make_dataset.ipynb  sample_data.ipynb  test.ipynb
src/ibldataset/: codemodel.py  ibldataset.py  main.py  psuedodata.py
src/ibltuning/ibldataset/: branchdataset.py  ibldataset.py  lineardataset.py  psuedodata.py
src/ibltuning/ibldataset/codemodel/: branch.py  linear.py  restrict_branch.py  restrict_linear.py
src/ibltuning/utils/: utils.py
