[tool.poetry]
name = "ibl-dataset"
version = "0.1.0"
description = ""
authors = ["toma tanaka <ulti4929@gmail.com>"]
readme = "README.md"
packages = [{include = "ibl_dataset"}]

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.16.1"
jinja2 = "^3.1.3"
pandas = "^2.1.4"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
